--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       </nav>
       <span class="decorative_text" aria-hidden="true">rec</span>
       <h1 class="header__title">no focus</h1>
+      <div class="header__text">
+        <p class="title-decor">Что делать, когда не&nbsp;можешь делать ничего</p> 
+        <p class="title-decor">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      </div>
     </header>
   </body>
 </html>
