--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <h2 class="content-section__title">Почему сосредоточиться так сложно</h2>
         <div class="text-blocks">
           <article class="text-block">
-            <h3 class="text-block__title">Многозадачность</h3>
+            <h3 class="text-block__title title-decor">Многозадачность</h3>
             <p class="text-block__text">Особенно сложно сосредоточиться, когда задач много и&nbsp;все они&nbsp;&mdash; важные. Где&nbsp;же легендарная многозадачность, когда она так нужна вам (и&nbsp;всем нанимающим менеджерам этого мира)? А&nbsp;дело в&nbsp;том, что её&nbsp;просто не&nbsp;существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на&nbsp;двух делах одновременно. А&nbsp;когда в&nbsp;поле внимания попадает несколько важных задач, организм паникует и&nbsp;выделяет кортизол и&nbsp;адреналин&nbsp;&mdash; &laquo;гормоны стресса&raquo;. Из-за этого мы&nbsp;работаем невнимательно: ошибаемся и&nbsp;быстро устаём.</p>
           </article>
           <article class="text-block">
-            <h3 class="text-block__title">Дофамин</h3>
+            <h3 class="text-block__title title-decor">Дофамин</h3>
             <p class="text-block__text">С&nbsp;гормонами стресса всё понятно, но&nbsp;дальше&nbsp;&mdash; ещё интереснее. В&nbsp;нашей невозможности сосредоточиться замешана и&nbsp;полная противоположность стрессу&nbsp;&mdash; дофамин. Это вещество участвует в&nbsp;системе вознаграждения мозга. Причём тут&nbsp;он? Мы&nbsp;часто отвлекаемся от&nbsp;важной задачи на&nbsp;что-то более &laquo;приятное&raquo; для мозгов. Например, смотрим лайки в&nbsp;соцсетях. В&nbsp;это время и&nbsp;выделяется дофамин&nbsp;&mdash; и&nbsp;мы&nbsp;чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
           </article>
         </div>
@@ -69,19 +69,15 @@
         <h2 class="content-section__title">Что снижает концентрацию внимания?</h2>
         <div class="text-blocks">
           <article class="text-block">
-            <h3 class="text-block__title">Многозадачность</h3>
+            <h3 class="text-block__title title-decor">Многозадачность</h3>
             <p class="text-block__text">Как концентрация может снижаться из-за... концентрации? Любая стрессовая ситуация (и&nbsp;резко меняющийся мир в&nbsp;целом) заставляет наш мозг постоянно &laquo;сканировать&raquo; окружающую среду на&nbsp;предмет опасности. Например, читать новости вместо работы. Но&nbsp;быть собранными всё время&nbsp;&mdash; невозможно. Концентрация&nbsp;&mdash; мышца, и&nbsp;она может не&nbsp;выдержать, если не&nbsp;давать ей&nbsp;отдохнуть.</p>
           </article>
-        </div>
-        <div class="text-blocks">
           <article class="text-block">
-            <h3 class="text-block__title">Еда</h3>
+            <h3 class="text-block__title title-decor">Еда</h3>
             <p class="text-block__text">&laquo;Быстрые углеводы&raquo;&nbsp;&mdash; сахар, белый хлеб, сладости&nbsp;&mdash; молниеносно доставляют в&nbsp;мозг энергию и&nbsp;помогают ему лучше работать. Но&nbsp;уходит эта энергия также быстро, как и&nbsp;приходит. А&nbsp;мы&nbsp;в&nbsp;результате попадаем на&nbsp;&laquo;углеводные качели&raquo;: как только действие &laquo;быстрых углеводов&raquo; заканчивается, мы&nbsp;чувствуем усталость и&nbsp;сонливость. И&nbsp;хотим ещё больше быстрых углеводов.</p>
           </article>
-        </div>
-        <div class="text-blocks">
           <article class="text-block">
-            <h3 class="text-block__title">Гаджеты</h3>
+            <h3 class="text-block__title title-decor">Гаджеты</h3>
             <p class="text-block__text">Да-да, это та&nbsp;самая ситуация, когда на&nbsp;экране ноутбука&nbsp;&mdash; код, в&nbsp;наушниках&nbsp;&mdash; подкаст, а&nbsp;на&nbsp;компьютере фоном&nbsp;&mdash; ещё и&nbsp;видео с&nbsp;забавными утятами. В&nbsp;результате мозг пытается переключиться с&nbsp;одной задачи на&nbsp;другую&nbsp;&mdash; и&nbsp;просто не&nbsp;может. А&nbsp;чтобы вернуться к&nbsp;состоянию полной концентрации, человеку в&nbsp;среднем нужно 20&nbsp;минут. Вот и&nbsp;получается, что чем больше времени мы&nbsp;проводим в&nbsp;гаджетах, тем больше времени затем нужно, чтобы вернуться к&nbsp;работе.</p>
           </article>
         </div>
@@ -90,7 +86,7 @@
         <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="text-blocks">
           <article class="text-block">
-            <h3 class="text-block__title">5&nbsp;простых (на&nbsp;самом деле не&nbsp;очень) советов</h3>
+            <h3 class="text-block__title title-decor">5&nbsp;простых (на&nbsp;самом деле не&nbsp;очень) советов</h3>
             <div class="text-block__list">
               <h4 class="text-block__subtitle">Представьте небо и облака</h4>
               <p class="text-block__text">Или листья в&nbsp;ручье. Тут дело в&nbsp;лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о&nbsp;сложных задачах как раз и&nbsp;мешают эти сложные задачи делать. В&nbsp;такие моменты можно закрыть глаза и&nbsp;представить, что чистое небо&nbsp;&mdash; это&nbsp;вы, а&nbsp;облака&nbsp;&mdash; тревожные мысли. И&nbsp;сколько&nbsp;бы их&nbsp;ни&nbsp;было&nbsp;&mdash; ясное небо всегда будет где-то там, за&nbsp;тучами, и&nbsp;никуда не&nbsp;денется. Это упражнение поможет вернуться в&nbsp;настоящий момент, а&nbsp;не&nbsp;волноваться о&nbsp;потенциальных проблемах из&nbsp;будущего.</p>
