--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="text-blocks">
           <article class="text-block">
             <h3 class="text-block__title title-decor">Многозадачность</h3>
-            <p class="text-block__text">Особенно сложно сосредоточиться, когда задач много и&nbsp;все они&nbsp;&mdash; важные. Где&nbsp;же легендарная многозадачность, когда она так нужна вам (и&nbsp;всем нанимающим менеджерам этого мира)? А&nbsp;дело в&nbsp;том, что её&nbsp;просто не&nbsp;существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на&nbsp;двух делах одновременно. А&nbsp;когда в&nbsp;поле внимания попадает несколько важных задач, организм паникует и&nbsp;выделяет кортизол и&nbsp;адреналин&nbsp;&mdash; &laquo;гормоны стресса&raquo;. Из-за этого мы&nbsp;работаем невнимательно: ошибаемся и&nbsp;быстро устаём.</p>
+            <p class="text-block__text">Особенно сложно сосредоточиться, когда задач много и&nbsp;все они&nbsp;&mdash; важные. Где&nbsp;же легендарная многозадачность, когда она так нужна вам (и&nbsp;всем нанимающим менеджерам этого мира)? А&nbsp;дело в&nbsp;том, что её&nbsp;просто не&nbsp;существует. Исследователи <a class="link" href="https://www.dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на&nbsp;двух делах одновременно. А&nbsp;когда в&nbsp;поле внимания попадает несколько важных задач, организм паникует и&nbsp;выделяет кортизол и&nbsp;адреналин&nbsp;&mdash; &laquo;гормоны стресса&raquo;. Из-за этого мы&nbsp;работаем невнимательно: ошибаемся и&nbsp;быстро устаём.</p>
           </article>
           <article class="text-block">
             <h3 class="text-block__title title-decor">Дофамин</h3>
@@ -97,7 +97,7 @@
             </div>
             <div class="text-block__list">
               <h4 class="text-block__subtitle">Прогуляйтесь</h4>
-              <p class="text-block__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в&nbsp;то&nbsp;время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с&nbsp;физическими упражнениями или бегом&nbsp;&mdash; так в&nbsp;мозг поступит ещё больше кислорода и&nbsp;он&nbsp;будет лучше работать. Но&nbsp;и&nbsp;простая двадцатиминутная прогулка&nbsp;&mdash; тоже отличный вариант.</p>
+              <p class="text-block__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в&nbsp;то&nbsp;время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с&nbsp;физическими упражнениями или бегом&nbsp;&mdash; так в&nbsp;мозг поступит ещё больше кислорода и&nbsp;он&nbsp;будет лучше работать. Но&nbsp;и&nbsp;простая двадцатиминутная прогулка&nbsp;&mdash; тоже отличный вариант.</p>
             </div>
             <div class="text-block__list">
               <h4 class="text-block__subtitle">Хорошо ешьте</h4>
