добавила footer и картинки

--- a/index.html
+++ b/index.html
@@ -110,7 +110,19 @@
           </article>
         </div>
       </section>
-      <section class="content-section wide-l"></section>
+      <section class="text-block">
+        <h3 class="title-decor">А можно в картинках?</h2>
+        <div class="image-block">
+          <img class="image-block__item image1" src="./images/sunset.png" alt="Закат в горах" loading="lazy" />
+          <img class="image-block__item image2" src="./images/ice-cream.png" alt="Мороженное в миске" loading="lazy" />
+          <img class="image-block__item image3" src="./images/tape.png" alt="Аудио-кассета" loading="lazy" />
+          <img class="image-block__item image4" src="./images/books.png" alt="Стопка книг" loading="lazy" />
+          <img class="image-block__item image5" src="./images/street.png" alt="Улица в японском стиле" loading="lazy" />
+        </div>
+      </section>
+      <footer class="footer decorated-zone">
+        <h2 class="footer__title">focus</h2>
+      </footer>
     </main>
   </body>
 </html>
